chore(headless-cms): update starter link

--- a/src/pages/docs/headless-cms/integrations/nextjs.mdx
+++ b/src/pages/docs/headless-cms/integrations/nextjs.mdx
@@ -27,11 +27,11 @@ In this article we'll learn how to integrate a NextJS application that uses Webi
 
 Webiny works really well as a headless CMS with [NextJS](http://nextjs.org), especially is that so when using static rendering and the new Preview mode available in NextJS version 9.3.
 
-The easiest way to get started is to use the [official starter](https://github.com/vercel/next.js/tree/canary/examples/cms-webiny), but we're going to walk through a similar custom implementation here.
+The easiest way to get started is to use the [official starter](https://github.com/webiny/nextjs-starter-webiny), but we're going to walk through a similar custom implementation here.
 
 <Alert type="info">
 
-Use the [official starter](https://github.com/vercel/next.js/tree/canary/examples/cms-webiny) for 1-click install on Vercel.
+Use the [official starter](https://github.com/webiny/nextjs-starter-webiny) for 1-click install on Vercel.
 
 </Alert>
 
