--- a/src/pages/docs/headless-cms/integrations/nextjs.mdx
+++ b/src/pages/docs/headless-cms/integrations/nextjs.mdx
@@ -62,7 +62,7 @@ Add the following models and fields: (Skip this step if you already have content
 
 Next, add some content by going to Headless CMS > Ungrouped and choosing a content model.
 
-Before we spin up our NextJS project, let's go to the API playrgound and see how our GraphQL API is structured. In the sidebar menu, choose "API Playground" to open the GraphQL explorer.
+Before we spin up our NextJS project, let's go to the API playground and see how our GraphQL API is structured. In the sidebar menu, choose "API Playground" to open the GraphQL explorer.
 
 ![GraphQL playground](./assets/nextjs-starter/api-playground-open.png)
 
