--- a/src/pages/docs/headless-cms/integrations/gatsby.mdx
+++ b/src/pages/docs/headless-cms/integrations/gatsby.mdx
@@ -30,7 +30,7 @@ The easiest way to get started is to use the [official starter](https://github.c
 
 <Alert type="info">
 
-Use the [official starter](https://github.com/webiny/gatsby-starter-webiny) for 1-click install on Vercel.
+Use the [official starter](https://github.com/webiny/gatsby-starter-webiny) for 1-click install on Gatsby Cloud.
 
 </Alert>
 
@@ -39,7 +39,7 @@ For this tutorial, we're going to assume you have already done the following:
 1. [Set up your AWS credentials locally](https://www.webiny.com/docs/infrastructure/aws/configure-aws-credentials)
 2. [Deployed a Webiny instance to a `dev` environment](https://www.webiny.com/docs/core-development-concepts/basics/project-deployment)
 
-Once you have an app up and running, click into the "HeadlessCMS" app in the sidebar, click on *models*.
+Once you have an app up and running, click into the "Headless CMS" app in the sidebar, click on *models*.
 
 ![Sidebar - Headless CMS Models](./assets/nextjs-starter/nextjs-tutorial-models.png)
 
@@ -104,20 +104,16 @@ Make sure you don't commit this file to your project's git repository otherwise 
 We're going to be using the plugin `gatsby-source-graphql` to fetch data from the GraphQL endpoint in our webiny instance. Run the following command to add the plugin:
 
 ```bash
-  yarn add gatsby-source-graphql
+  npm install gatsby-source-graphql
 ```
 
-Next, open the file `gatsby-config.js` and add the following to the top of the file:
+Next, open the file `gatsby-config.js` and add the following. First we need to import `dotenv` and specify where we have put our environment variables so we can access them. Then inside the exported object we're going to define our new plugin and the configuration we need to fetch data:
 
 ```javascript gatsby-config.js
   require("dotenv").config({
     path: `.env`,
   })
-```
 
-This will ensure we can access the environment variables we created. In side the `module.exports` object we're going to define our new plugin and the configuration we need to fetch data:
-
-```javascript gatsby-config.js
   module.exports = {
     // other config
     plugins: [
@@ -139,7 +135,7 @@ As you can see, we're going to pass our environment variables to the plugin to f
 If you start developing and visit the graphql endpoint in Gatsby you will see how this changes our graphql data:
 
 ```bash
-  yarn develop
+  npm run develop
 ```
 
 Open the browser at the url `http://localhost:8000/___graphql` (that's three underscores) and if successful you will see the `webiny` content source:
@@ -154,16 +150,12 @@ Gatsby's approach to data is quite unique but very useful. Now that we have data
 
 To create pages, we need to modify the `gatsby-node.js` file so that it fetches and renders our posts.
 
-To do that, first import the dependencies we will need:
+To do that, we will need to import `path` and `gatsby-source-filesystem`, and export a function named `createPages` like so:
 
 ```javascript gatsby-node.js
 const path = require(`path`)
 const { createFilePath } = require(`gatsby-source-filesystem`)
-```
 
-Next we need to export a `createPages` function which will loop over our data and create pages using a template we specify.
-
-```javascript gatsby-node.js
 exports.createPages = async ({ graphql, actions, reporter }) => {
   const { createPage } = actions
 
@@ -224,7 +216,18 @@ exports.createPages = async ({ graphql, actions, reporter }) => {
 
 The final step is to create a template for your created nodes and pass the data to the component:
 
-```javascript /src/templates/blog-post.js
+```jsx /src/templates/blog-post.js
+
+export default BlogPostTemplate = ({ data, location }) => {
+  const post = data.webiny.getPost.data
+  const siteTitle = data.site.siteMetadata?.title || `Title`
+  const { previous, next } = data.webiny
+
+  return (
+    <h1>{post.title}</h1>
+  )
+}
+
 export const pageQuery = graphql`
   query PostBySlug(
       $slug: String
@@ -257,39 +260,25 @@ export const pageQuery = graphql`
 `
 ```
 
-Now you should be able to render data in the page component:
-
-```javascript /src/templates/blog-post.js
-const BlogPostTemplate = ({ data, location }) => {
-  const post = data.webiny.getPost.data
-  const siteTitle = data.site.siteMetadata?.title || `Title`
-  const { previous, next } = data.webiny
-
-  return (
-    <h1>{post.title}</h1>
-  )
-}
-```
-
-If this is succesful you should be able to start your development server and see pages rendered with URL paths that correspond to your posts.
+If this is successful you should be able to start your development server and see pages rendered with URL paths that correspond to your posts.
 
 <Alert type="info">
+
 For more information about creating pages from data, [see the Gatsby documentation](https://www.gatsbyjs.com/docs/programmatically-create-pages-from-data/).
+
 </Alert>
 
 ## Rendering rich text fields
 
-You may have noticed that we chose a `rich-text` field for the **body** of the post. You can copy the code from `https://github.com/webiny/webiny-js/blob/next/packages/react-rich-text-renderer/src/index.tsx` into a new component and use that in your template.
+You may have noticed that we chose a `rich-text` field for the **body** of the post. You can copy the code from [https://github.com/webiny/webiny-js/blob/next/packages/react-rich-text-renderer/src/index.tsx](https://github.com/webiny/webiny-js/blob/next/packages/react-rich-text-renderer/src/index.tsx) into a new component and use that in your template.
 
-```jsx /pages/posts/[slug].js
+```jsx /src/templates/blog-post.js
 // import the renderer
 import { RichTextRenderer } from '../components/rich-text-renderer'
 
 // in your render function
 <RichTextRenderer data={content} />
 ```
-
-
 
 <Alert type="info">
 
