--- a/src/pages/docs/core-development-concepts/basics/project-deployment.mdx
+++ b/src/pages/docs/core-development-concepts/basics/project-deployment.mdx
@@ -126,7 +126,7 @@ This can significantly help in debugging underlying deployment ([Pulumi](../../i
 
 ## Building the Application Code
 
-It's worth mentioning that the deployment commands shown above also build your application code. They perform this task by just running the following [`workspaces run`](/docs/how-to-guides/working-with-workspaces) command:
+It's worth mentioning that the deployment commands shown above also build your application code. They perform this task by just running the following `workspaces run` command:
 
 ```bash
 yarn webiny workspaces run build --folder {STACK_FOLDER}
