feat: updates to 5.25.0 changelog

--- a/src/pages/docs/release-notes/5.25.0/changelog.mdx
+++ b/src/pages/docs/release-notes/5.25.0/changelog.mdx
@@ -6,17 +6,44 @@ description: See what's new in Webiny version 5.25.0.
 
 # Changes
 
+## Code Upgrades
+### Turned On Strict TypeScript ([#2235](https://github.com/webiny/webiny-js/pull/2235))
+With this release we turned on strict in our repository Typescript and increased the version to `4.5.5`.
+
+Existing user projects are not upgraded because it would, with a high probability, cause a lot of failed builds. Users can upgrade by themselves and go through the code and
+New user projects will be created with strict Typescript and the `4.5.5` version.
+
+This was a really large rewrite of our code (~1500 files updated). We still have some TODOs left in the code, but the main part of the work is done.
+
+We will upgrade to the latest Typescript (4.6.3, at the time of this changelog) as soon as eslint will support it.
+
+### Fixed Error When Storing Multiple Reference Field in CMS Entry ([#2264](https://github.com/webiny/webiny-js/pull/2264))
+This PR also includes a stricter CMS Entry GraphQL input check when having an Array input.
+To turn this check off, set the `HEADLESS_CMS_GRAPHQL_INPUT_REQUIRE_ARRAY_ITEM` environmental variable to `false`.
+
+### Block Navigating Away From the CMS Entry if Any Field Was Changed ([#2285](https://github.com/webiny/webiny-js/pull/2285))
+
+### Clear the GraphQL Scheme Cache After CMS Model Was Cloned ([#2288](https://github.com/webiny/webiny-js/pull/2288))
+
+### Fix for the Logging From Lambda to Browser Console ([#2301](https://github.com/webiny/webiny-js/pull/2301))
+
+### Added GraphQL Methods To Fetch the Latest or Published CMS Entries To Manage API ([#2266](https://github.com/webiny/webiny-js/pull/2266))
+This PR also includes status icons for the reference and multi-reference fields for each of the referenced entry.
+
+### Switched To React Router V6 ([#2277](https://github.com/webiny/webiny-js/pull/2277))
+While fixing the Typescript build fails we had to switch to React Router v6.
+User projects should not be affected because we created wrappers around React Router v6 components and hooks to make it work with our existing user project code, without any changes to it.
 
 
 ## Other
 
-### Source map support
+### Source Map Support
 
 All of our packages will now have source maps generated. That will greatly help debugging issues.
 We have also added source map support for all lambda functions.
 It's enabled by default, but you can disable it by adding `sourceMaps: false` to `createBuildFunction` inside your lambdas' `webiny.config.ts` files.
 
-### GraphQL errors include stacktrace
+### GraphQL Errors Include Stacktrace
 
 We've added a new stacktrace field (namely `stack`) to errors returned from GraphQL API for a better debugging experience.
 This behavior is optional and needs to be enabled by passing `DEBUG=true` environmental variable (for example to your `.env` file).
