feat: group code upgrades, new features and bugfixes

--- a/src/pages/docs/release-notes/5.25.0/changelog.mdx
+++ b/src/pages/docs/release-notes/5.25.0/changelog.mdx
@@ -17,22 +17,24 @@ This was a really large rewrite of our code (~1500 files updated). We still have
 
 We will upgrade to the latest Typescript (4.6.3, at the time of this changelog) as soon as eslint will support it.
 
-### Fixed Error When Storing Multiple Reference Field in CMS Entry ([#2264](https://github.com/webiny/webiny-js/pull/2264))
-This PR also includes a stricter CMS Entry GraphQL input check when having an Array input.
-To turn this check off, set the `HEADLESS_CMS_GRAPHQL_INPUT_REQUIRE_ARRAY_ITEM` environmental variable to `false`.
+### Switched To React Router V6 ([#2277](https://github.com/webiny/webiny-js/pull/2277))
+While fixing the Typescript build fails we had to switch to React Router v6.
+User projects should not be affected because we created wrappers around React Router v6 components and hooks to make it work with our existing user project code, without any changes to it.
 
+## New Features
 ### Block Navigating Away From the CMS Entry if Any Field Was Changed ([#2285](https://github.com/webiny/webiny-js/pull/2285))
-
-### Clear the GraphQL Scheme Cache After CMS Model Was Cloned ([#2288](https://github.com/webiny/webiny-js/pull/2288))
-
-### Fix for the Logging From Lambda to Browser Console ([#2301](https://github.com/webiny/webiny-js/pull/2301))
 
 ### Added GraphQL Methods To Fetch the Latest or Published CMS Entries To Manage API ([#2266](https://github.com/webiny/webiny-js/pull/2266))
 This PR also includes status icons for the reference and multi-reference fields for each of the referenced entry.
 
-### Switched To React Router V6 ([#2277](https://github.com/webiny/webiny-js/pull/2277))
-While fixing the Typescript build fails we had to switch to React Router v6.
-User projects should not be affected because we created wrappers around React Router v6 components and hooks to make it work with our existing user project code, without any changes to it.
+## Bugfixes
+### Fixed Error When Storing Multiple Reference Field in CMS Entry ([#2264](https://github.com/webiny/webiny-js/pull/2264))
+This PR also includes a stricter CMS Entry GraphQL input check when having an Array input.
+To turn this check off, set the `HEADLESS_CMS_GRAPHQL_INPUT_REQUIRE_ARRAY_ITEM` environmental variable to `false`.
+
+### Clear the GraphQL Scheme Cache After CMS Model Was Cloned ([#2288](https://github.com/webiny/webiny-js/pull/2288))
+
+### Fix for the Logging From Lambda to Browser Console ([#2301](https://github.com/webiny/webiny-js/pull/2301))
 
 
 ## Other
